--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
   <h1>A history of everything you copy</h1>
 
   <p class="description">Clipboard allows you to track and organize everything you 
-    copy. Instantly access your clipboard on all your devices.</p>
+    copy. Instantly <br> access your clipboard on all your devices.</p>
 
     <div class="container">
       <button class="ios">Download for iOS</button>
       <button class="mac">Download for Mac</button>
     </div>
 
+    <h1>Keep track of your snippets</h1>
+
+    <p class="description" >Clipboard instantly stores any item you copy in the cloud, 
+      meaning you can access <br> your snippets immediately on all your 
+      devices. Our Mac and iOS apps will help you <br> organize everything.</p>
+
+
   <!-- 
   Keep track of your snippets
 
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
+  
 
   Quick Search
 
