--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 <body>
 
+<div class="page-1">
+
   <img class="img-header" src="./images/bg-header-desktop.png">
   <img class="logo" src="./images/logo.svg">
 
@@ -26,6 +28,9 @@
       <button class="ios">Download for iOS</button>
       <button class="mac">Download for Mac</button>
     </div>
+  </div>
+
+    <div class="page-2">
 
     <h1>Keep track of your snippets</h1>
 
@@ -33,29 +38,23 @@
       meaning you can access <br> your snippets immediately on all your 
       devices. Our Mac and iOS apps will help you <br> organize everything.</p>
 
+        <div class="container-h2">
+          <img class="img-computer" src="./images/image-computer.png" alt="Imagem de um computador">
+
+          <h2>Quick Search</h2>
+          <p class="description-h2">Easily search your snippets by content, <br> category, web address, application, and more.</p>
+
+          <h2>iCloud Sync</h2>
+          <p class="description-h2">Instantly saves and syncs snippets across all <br> your devices.</p>
+
+          <h2>Complete History</h2>
+          <p class="description-h2">Retrieve any snippets from the first moment <br> you started using the app.</p>
+        </div>
+      </div>
+
+</body>
 
   <!-- 
-  Keep track of your snippets
-
-  
-
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
   Supercharge your workflow
 
   We’ve got the tools to boost your productivity.
