--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         </div>
       </div>
 
+      <div class="page-3">
+
+        <h1>Access Clipboard anywhere</h1>
+        <p class="description-h2">Whether you’re on the go, or at your computer, you can access all your Clipboard 
+          <br> snippets in a few simple clicks.</p>
+
+        <img src="./images/image-devices.png">
+
+      </div>
+
 </body>
 
   <!-- 
