Finalizado a quarta pagina da aplicação

--- a/index.html
+++ b/index.html
@@ -42,45 +42,54 @@
           <img class="img-computer" src="./images/image-computer.png" alt="Imagem de um computador">
 
           <h2>Quick Search</h2>
-          <p class="description-h2">Easily search your snippets by content, <br> category, web address, application, and more.</p>
+          <p>Easily search your snippets by content, <br> category, web address, application, and more.</p>
 
           <h2>iCloud Sync</h2>
-          <p class="description-h2">Instantly saves and syncs snippets across all <br> your devices.</p>
+          <p>Instantly saves and syncs snippets across all <br> your devices.</p>
 
           <h2>Complete History</h2>
-          <p class="description-h2">Retrieve any snippets from the first moment <br> you started using the app.</p>
+          <p>Retrieve any snippets from the first moment <br> you started using the app.</p>
         </div>
       </div>
 
       <div class="page-3">
 
         <h1>Access Clipboard anywhere</h1>
-        <p class="description-h2">Whether you’re on the go, or at your computer, you can access all your Clipboard 
+        <p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
           <br> snippets in a few simple clicks.</p>
 
         <img src="./images/image-devices.png">
 
       </div>
 
+      <div class="page-4">
+        <h1>Supercharge your workflow</h1>
+        <p>We’ve got the tools to boost your productivity.</p>
+
+        <div class="container">
+          <img src="./images/icon-blacklist.svg">
+          <h1>Create blacklists</h1>
+          <p>Ensure sensitive information never makes its <br>way to your clipboard by excluding certain<br> sources.</p>
+        </div>
+        
+        <div class="container">
+          <img src="./images/icon-text.svg">
+          <h1>Plain text snippets</h1>
+          <p>Remove unwanted formatting from copied text<br> for a consistent look.</p>
+        </div>
+
+        <div class="container">
+          <img src="./images/icon-preview.svg">
+          <h1>Sneak preview</h1>
+          <p>Quick preview of all snippets on your Clipboard<br> for easy access.</p>
+        </div>
+
+      </div>
+
+      
 </body>
 
   <!-- 
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
   Clipboard for iOS and Mac OS
 
   Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
