Corrigido imagem de background da página

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <title>Frontend Mentor | Clipboard landing page</title>
 </head>
-<body>
 
+<body>
 <div class="page-1">
 
   <img class="img-header" src="./images/bg-header-desktop.png">
@@ -21,7 +21,7 @@
 
   <h1>A history of everything you copy</h1>
 
-  <p class="description">Clipboard allows you to track and organize everything you 
+  <p>Clipboard allows you to track and organize everything you 
     copy. Instantly <br> access your clipboard on all your devices.</p>
 
     <div class="container">
@@ -34,7 +34,7 @@
 
     <h1>Keep track of your snippets</h1>
 
-    <p class="description" >Clipboard instantly stores any item you copy in the cloud, 
+    <p>Clipboard instantly stores any item you copy in the cloud, 
       meaning you can access <br> your snippets immediately on all your 
       devices. Our Mac and iOS apps will help you <br> organize everything.</p>
 
@@ -83,10 +83,19 @@
           <h1>Sneak preview</h1>
           <p>Quick preview of all snippets on your Clipboard<br> for easy access.</p>
         </div>
+      </div>
+
+      <div class="page-5">
+        <div class="images">
+        <img src="./images/logo-google.png">
+        <img src="./images/logo-ibm.png">
+        <img src="./images/logo-microsoft.png">
+        <img src="./images/logo-hp.png">
+        <img src="./images/logo-vector-graphics.png">
+        </div>
 
       </div>
 
-      
 </body>
 
   <!-- 
