--- a/index.html
+++ b/index.html
@@ -96,16 +96,21 @@
 
       </div>
 
+      <div class="page-6">
+        <h1>Clipboard for iOS and Mac OS</h1>
+
+  <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+    and <br> you’re ready to start adding to your clipboard.</p>
+
+    <div class="container">
+      <button class="ios">Download for iOS</button>
+      <button class="mac">Download for Mac</button>
+
+      </div>
+
 </body>
 
   <!-- 
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
 
   FAQs
   Contact Us
@@ -114,10 +119,26 @@
   Install Guide -->
   
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>. 
-      Coded by <a href="#">Jessica Costa</a>.
-    </p>
+
+    <div class="logo">
+			<img class="logo" src="./images/logo.svg" alt="Logo">
+		</div>
+		<div class="links-top">
+			<div><a href="#">FAQs</a></div>
+			<div><a href="#">Privacy Policy</a></div>
+			<div><a href="#">Install Guide</a></div>
+      </div>
+      <div class="links-buttom">
+			<div><a href="#">Contact Us</a></div>
+			<div><a href="#">Press Kit</a></div>
+    </div>
+		</div>
+		<div class="social">
+			<img src="./images/icon-facebook.svg">
+			<img src="./images/icon-twitter.svg">
+			<img src="./images/icon-instagram.svg">
+		</div>
+
   </footer>
 </body>
 </html>
