Ajustes no footer

--- a/index.html
+++ b/index.html
@@ -119,26 +119,24 @@
   Install Guide -->
   
   <footer>
-
     <div class="logo">
-			<img class="logo" src="./images/logo.svg" alt="Logo">
+			<img class="logoFooter" src="./images/logo.svg" alt="Logo">
 		</div>
-		<div class="links-top">
-			<div><a href="#">FAQs</a></div>
-			<div><a href="#">Privacy Policy</a></div>
-			<div><a href="#">Install Guide</a></div>
-      </div>
-      <div class="links-buttom">
-			<div><a href="#">Contact Us</a></div>
-			<div><a href="#">Press Kit</a></div>
-    </div>
+
+		<div class="links">
+			<a class="item" href="#">FAQs</a>
+			<a class="item" href="#">Privacy Policy</a>
+			<a class="item" href="#">Install Guide</a>
+			<a class="item" href="#">Contact Us</a>
+			<a class="item" href="#">Press Kit</a>
 		</div>
+
 		<div class="social">
 			<img src="./images/icon-facebook.svg">
 			<img src="./images/icon-twitter.svg">
 			<img src="./images/icon-instagram.svg">
 		</div>
-
   </footer>
+
 </body>
 </html>
