Ajustes no footer

--- a/index.html
+++ b/index.html
@@ -110,20 +110,10 @@
 
 </body>
 
-  <!-- 
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide -->
-  
   <footer>
-    <div class="logo">
 			<img class="logoFooter" src="./images/logo.svg" alt="Logo">
-		</div>
 
-		<div class="links">
+		<div class="linksFooter">
 			<a class="item" href="#">FAQs</a>
 			<a class="item" href="#">Privacy Policy</a>
 			<a class="item" href="#">Install Guide</a>
@@ -131,10 +121,10 @@
 			<a class="item" href="#">Press Kit</a>
 		</div>
 
-		<div class="social">
-			<img src="./images/icon-facebook.svg">
-			<img src="./images/icon-twitter.svg">
-			<img src="./images/icon-instagram.svg">
+		<div class="socialFooter">
+			<img class="icon" src="./images/icon-facebook.svg">
+			<img class="icon" src="./images/icon-twitter.svg">
+			<img class="icon" src="./images/icon-instagram.svg">
 		</div>
   </footer>
 
