--- a/index.html
+++ b/index.html
@@ -86,15 +86,15 @@
       </div>
 
       <div class="page-5">
-        <div class="images">
-        <img src="./images/logo-google.png">
-        <img src="./images/logo-ibm.png">
-        <img src="./images/logo-microsoft.png">
-        <img src="./images/logo-hp.png">
-        <img src="./images/logo-vector-graphics.png">
-        </div>
-
+      <div class="imagensPage-5">
+        <img class="image1" src="./images/logo-google.png">
+        <img class="image2" src="./images/logo-ibm.png">
+        <img class="image3" src="./images/logo-microsoft.png">
+        <img class="image4" src="./images/logo-hp.png">
+        <img class="image5" src="./images/logo-vector-graphics.png">
       </div>
+      </div>
+
 
       <div class="page-6">
         <h1>Clipboard for iOS and Mac OS</h1>
